# f1rc

./: .gitignore  CMakeLists.txt  README.md
apps/: apps.cmake
apps/car/: car.c  car.cmake  main.c
apps/car/dispatcher/: car_dispatcher.c  dispatcher.cmake
apps/car/dispatcher/inc/: car_dispatcher.h
apps/car/inc/: car.h
apps/car/protobuf/: main.proto
apps/commander/: commander.c  commander.cmake  protobuf_static_allocator.h
apps/commander/inc/: commander.h
apps/controller/: controller.c  controller.cmake  main.c
apps/controller/dispatcher/: controller_dispatcher.c  dispatcher.cmake
apps/controller/dispatcher/inc/: controller_dispatcher.h
apps/controller/inc/: controller.h
apps/controller/protobuf/: main.proto
cnc/: controller_cnc.py  main.py
cnc/commander/: commander.py
cnc/interfaces/: interface.py  serial_interface.py  socket_interface.py
cnc/protocols/: hldc_protocol.py  protocol.py
comms/: comms.cmake
comms/hldc/: hldc.c  hldc_internal.h
comms/hldc/inc/: hldc.h
comms/simpliciti/: simpliciti.c  simpliciti.cmake  simpliciti.md
comms/simpliciti/inc/: mfri.h  nwk.h  simplciti_common.h  simpliciti.h
comms/simpliciti/mfri/: mfri.c
comms/simpliciti/nwk/: nwk.c
hldc/: hldc.c  hldc.cmake
tests/: hldc_tests.c  simpliciti_tests.c  tests.cmake
utils/: utils.cmake
utils/crc/: crc.c  crc.cmake
utils/crc/inc/: crc.h
utils/tracing/: tracing.cmake
utils/tracing/inc/: tracing.h
